--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/assets/style.css">
+        <link rel="stylesheet" href="/todo-list//assets/style.css">
         <title>TO DO LIST</title>
     </head>
     <body>
@@ -29,6 +29,6 @@
             <button id="showUncompleted">Uncompleted</button>
         </div>
     </div>
-        <script src="/assets/script.js"></script>
+        <script src="/todo-list//assets/script.js"></script>
     </body>
     </html>
